--- a/MiniProjet/css/styles.css
+++ b/MiniProjet/css/styles.css
@@ -453,6 +453,8 @@ a {
     text-decoration: underline;
 }
 
+
+/* Responsivité */
 @media (max-width: 768px) {
     .navbar .menu {
         flex-direction: column;
@@ -467,4 +469,26 @@ a {
         flex-direction: column;
         align-items: center;
     }
+    .mainbody {
+        padding: 10px;
+    }
+
+    .header {
+        flex-direction: column;
+    }
+
+    .MainContentBloc {
+        flex-direction: column;
+    }
+
+    .BlocImage, .Bloc, .Contact {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .navbar .menu a {
+        width: 100%;
+        text-align: center;
+    }
+    
 }
