--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -766,6 +766,14 @@ hr {
         box-shadow: none;
     }
 
+    .competence-block{
+        flex-direction: column;
+    }
+
+    .competence-content{
+        flex-direction: column;
+    }
+
     
 
     /* Body */
