--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -1,4 +1,10 @@
 /* Header */
+.title h1{
+    text-align: center;
+    margin-top: 20px;
+	background-color: #002147;
+	color: #ffffff;
+}
 .header {
     display: flex;
     justify-content: space-between;
