--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -813,12 +813,13 @@ hr {
 }
 
 .button-stack {
-    display: flex;
+    display: block;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #f0f0f0;
+    padding-bottom: 60px; /* To avoid the message from overlapping the buttons */
 }
 
 .button-container {
@@ -842,11 +843,12 @@ hr {
     transform: scale(0.9);
     background-color: #d81920;
 }
+
 .message {
     font-family: Verdana, sans-serif;
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 20px;  /* Keep the message at the bottom of the page */
     left: 50%;
     transform: translateX(-50%);
     background-color: #0f0fac;
@@ -855,12 +857,13 @@ hr {
     border-radius: 5px;
     animation: fadeIn 0.5s, fadeOut 0.5s 4.5s;
 }
+
+
 @keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
 @keyframes fadeOut {
-    from {opacity: 1;}
-    to {opacity: 0;}
+    from { opacity: 1; }
+    to { opacity: 0; }
 }
-
