--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -747,6 +747,7 @@ hr {
     text-decoration: underline;
 }
 
+
 /* Responsivité */
 @media (max-width: 700px) {
     
@@ -866,4 +867,42 @@ hr {
 @keyframes fadeOut {
     from { opacity: 1; }
     to { opacity: 0; }
+}
+
+
+#snowLink {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    cursor: pointer;
+    position: absolute;
+    margin-top: 30px;
+    margin-left: -30px;
+}
+
+.snow {
+    position: absolute;
+    top: -10px;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 9999;
+}
+
+.snowflake {
+    position: absolute;
+    color: #fff;
+    font-size: 24px;
+    opacity: 0.8;
+    pointer-events: none;
+    animation: fall 5s infinite linear;
+}
+
+@keyframes fall {
+    0% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(100vh);
+    }
 }
