--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -287,12 +287,6 @@ h1 {
     width: 80%;
 }
 
-.image2 p {
-	background-color : #eeaaaa;
-    border-radius: 5px;
-	padding : 10px;
-}
-
 #boutenvoyer {
     background-color: #cc0000; /* Couleur par défaut du bouton */
     color: white; /* Couleur du texte */
@@ -336,7 +330,7 @@ h1 {
 	max-height: 350px;
 }
 
-#icon {
+.icon {
 	width: 100%;
     height: 80%;
     object-fit: cover;
@@ -697,6 +691,24 @@ hr {
     background-color: #f8f8f8; /* Rouge clair */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+.responsive-iframe {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    height: auto;
+    
+  }
+  
+  .responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
 
 /* footer */
 .footer {
@@ -756,9 +768,6 @@ hr {
     from { opacity: 1; }
     to { opacity: 0; }
 }
-
-
-
 
 .snow {
     position: absolute;
@@ -836,7 +845,6 @@ hr {
         border-radius: 10px; /* Coins arrondis */
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre douce */
     }
-
     /* Footer */   
 }
 
