--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -787,6 +787,37 @@ hr {
     }
 }
 
+/* Count-down */
+#showCountdown {
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+#showCountdown:hover {
+    background-color: #45a049;
+}
+
+#countdown {
+    display: none;
+    font-size: 2em;
+    margin-top: 20px;
+    color: #333;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease, transform 1s ease;
+}
+
+#countdown.show {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
 
 /* Responsivité */
 @media (max-width: 700px) {
