--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -287,6 +287,12 @@ h1 {
     width: 80%;
 }
 
+.image2 p {
+	background-color : #eeaaaa;
+    border-radius: 5px;
+	padding : 10px;
+}
+
 #boutenvoyer {
     background-color: #cc0000; /* Couleur par défaut du bouton */
     color: white; /* Couleur du texte */
@@ -330,7 +336,7 @@ h1 {
 	max-height: 350px;
 }
 
-.icon {
+#icon {
 	width: 100%;
     height: 80%;
     object-fit: cover;
@@ -691,24 +697,6 @@ hr {
     background-color: #f8f8f8; /* Rouge clair */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-.responsive-iframe {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 ratio */
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    height: auto;
-    
-  }
-  
-  .responsive-iframe iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
 
 /* footer */
 .footer {
@@ -769,6 +757,9 @@ hr {
     to { opacity: 0; }
 }
 
+
+
+
 .snow {
     position: absolute;
     top: -10px;
@@ -798,28 +789,20 @@ hr {
 
 /* Count-down */
 #showCountdown {
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
     transition: background-color 0.3s;
-}
-
-#showCountdown:hover {
-    background-color: #45a049;
+    font-family: 'Orbitron', sans-serif;
 }
 
 #countdown {
     display: none;
     font-size: 2em;
     margin-top: 20px;
-    color: #333;
+    color: white;
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(0px);
     transition: opacity 1s ease, transform 1s ease;
+    display: none;
+    font-family: 'Orbitron', sans-serif;
 }
 
 #countdown.show {
@@ -876,6 +859,7 @@ hr {
         border-radius: 10px; /* Coins arrondis */
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre douce */
     }
+
     /* Footer */   
 }
 
