--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -946,4 +946,21 @@ hr {
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); 
 }
 
+#santa {
+    position: relative;
+    top: 10%;
+    right: 20px;
+    width: 100px;
+    height: auto;
+    opacity: 0; 
+    transform: scale(0.5); 
+    transition: opacity 0.5s ease, transform 0.5s ease; 
+    z-index: 999; 
+}
+
+#santa.show {
+    opacity: 1; 
+    transform: scale(1); 
+}
+
 
