--- a/Mini projet 2024 F4/css/styles.css
+++ b/Mini projet 2024 F4/css/styles.css
@@ -963,4 +963,19 @@ hr {
     transform: scale(1); 
 }
 
+#grinch {
+    position: relative;
+    top: 10%;
+    right: 20px;
+    width: 100px;
+    height: auto;
+    opacity: 0; 
+    transform: scale(0.5); 
+    transition: opacity 0.5s ease, transform 0.5s ease; 
+    z-index: 999; 
+}
 
+#message.show {
+    opacity: 1; 
+    transform: scale(1); 
+}
